--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
     <groupId>io.quarkus</groupId>
     <artifactId>quarkus-hibernate-orm-panache</artifactId>
   </dependency>
+  <dependency>
+    <groupId>org.modelmapper</groupId>
+    <artifactId>modelmapper</artifactId>
+    <version>2.4.4</version> <!-- Use the latest version available -->
+</dependency>
   <!-- JUnit -->
   
   	<dependency>
