--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 		<scope>provided</scope>
 	</dependency>
     
+    <dependency>
+		<groupId>io.quarkus</groupId>
+		<artifactId>quarkus-smallrye-openapi</artifactId>
+	</dependency>
+    
     
   <dependency>
     <groupId>io.quarkus</groupId>
