--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
 quarkus.datasource.password=postgres
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/perinity.api.ms
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/perinity.final
 quarkus.hibernate-orm.database.generation=update
